# FAST-API-TDD

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
store/: main.py
store/core/: config.py
store/models/: base.py
